force-app/main/default/objects/Saved_Job__c/Saved_Job__c.object-meta.xml
<CustomObject>
    <description>Jobs saved by candidates from the candidate portal.</description>
    <label>Saved Job</label>
    <nameField>
        <displayFormat>SJ-{000000}</displayFormat>
        <label>Saved Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Saved Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>