force-app/main/default/objects/Saved_Job__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Saved Jobs</relationshipLabel>
    <relationshipName>Saved_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>