force-app/main/default/objects/Saved_Job__c/fields/Saved_Date__c.field-meta.xml
<CustomField>
    <fullName>Saved_Date__c</fullName>
    <label>Saved Date</label>
    <type>DateTime</type>
</CustomField>